# TP_PATTERNS

./: CMakeLists.txt  README.md  run_game.sh
src/: CMakeLists.txt  Destroyer.cpp  Player.cpp  Provocateur.cpp  Support.cpp  Warrior.cpp  Wizard.cpp  army.cpp  army.h  armyfactory.cpp  armyfactory.h  player.h  unittypes.cpp  unittypes.h
tests/: test_unittypes.cpp  test_unittypes.h
