cmake_minimum_required(VERSION 3.15)
#project(Game)

#set(CMAKE_CXX_STANDARD 14)
add_library(lib unittypes.cpp unittypes.h)
#add_executable(Game main.cpp unittypes.h armyfactory.h army.h unittypes.cpp Wizard.cpp Warrior.cpp Support.cpp Provocateur.cpp Destroyer.cpp player.h Player.cpp armyfactory.cpp army.cpp)